@@ -10,6 +10,16 @@
 			to make several changes to Segue's database and file-storage structure.
 		 (<i>Adam Franco</i>)
 		
+		<li/> Change:  
+			Everyone and institute permissions are now not dropped on site-copy.
+			As well, when creating a group from an existing site, the permissions are 
+			now retained.
+		 (<i>Adam Franco</i>)
+		<li/> Bug Fix:
+	<a href="&#10;        				http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1036482&amp;group_id=82171&amp;atid=565234">
+        			#1036482</a> 
+			LDAP users are now syched with the database when they are given permissions.
+		 (<i>Adam Franco</i>)
 		<li/> Bug Fix:
 	 
 			When adding slots to a group, they now disapear from the site listing.
